ST-51: Try to fix toc gap on mobile

--- a/public/themes/custom/helstra/src/scss/components/content/_article_full.scss
+++ b/public/themes/custom/helstra/src/scss/components/content/_article_full.scss
@@ -103,6 +103,7 @@
       button:focus + .article-table-of-contents,
       .article-table-of-contents:focus-within {
         margin-bottom: 0 !important;
+        margin-top: -1px;
 
         #article-toc {
           .shadow {
